| Summary: | ASTERISK-16712: Asterisk does not re-read res_fax.conf upon reload | ||
| Reporter: | Frank DiGennaro (cbbs70a) | Labels: | |
| Date Opened: | 2010-09-22 13:16:30 | Date Closed: | 2012-02-09 11:01:19.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_fax |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I am using a plain vanilla Asterisk-1.8.0-beta5 setup. Asterisk will properly read res_fax.conf when it starts, but after modifying the values in res_fax.conf (in this case minrate and maxrate) and doing a "reload", the new values are not read. This is very reproducible. | ||
| Comments: | By: Paul Belanger (pabelanger) 2010-09-22 19:33:59 Can res_fax.so even be reloaded? I don't think it supports it. *CLI> module reload res_fax.so Module 'res_fax.so' does not support reload By: Leif Madsen (lmadsen) 2010-09-23 10:27:36 It's true that res_fax.so does not have 'reload' support. Per kpfleming and tlesher, if the module has configuration options, it is expected behaviour that we would support reloads, so to close this issue we need to add reload support. For now, the work around is to unload and load the module to cause changes to happen. | ||